// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlayerControls > matches the snapshot 1`] = `
"<div class="centerItems playerControls"><button class="centerItems buttonLink" type="button" title="Switch shuffle off">
    <phshuffle class="icon" aria-hidden="true" size="24" weight="duotone" color="currentColor"></phshuffle><span class="clamp text visuallyHidden">Switch shuffle off</span>
  </button><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
    <phskipback class="icon" aria-hidden="true" size="24" weight="duotone"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
  </button>
  <!--v-if--><span class="centerItems spinningLoader spinningLoader playPauseButton"><ph-circle-notch-stub size="20" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
  <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
    <phskipforward class="icon" aria-hidden="true" size="24" weight="duotone"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
  </button><button class="centerItems buttonLink" type="button" title="Turn on repeat all">
    <phrepeat class="icon" aria-hidden="true" size="24" weight="duotone" color="currentColor"></phrepeat><span class="clamp text visuallyHidden">Turn on repeat all</span>
  </button>
</div>"
`;

exports[`PlayerControls > when isPodcast value is true > matches the snapshot 1`] = `
"<div class="centerItems playerControls">
  <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
    <phskipback class="icon" aria-hidden="true" size="24" weight="duotone"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
  </button><button class="centerItems buttonLink" type="button" title="Rewind back 10 seconds">
    <phrewind class="icon" aria-hidden="true" size="24" weight="duotone"></phrewind><span class="clamp text visuallyHidden">Rewind back 10 seconds</span>
  </button><span class="centerItems spinningLoader spinningLoader playPauseButton"><ph-circle-notch-stub size="20" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span><button class="centerItems buttonLink" type="button" title="Fast forward back 30 seconds">
    <phfastforward class="icon" aria-hidden="true" size="24" weight="duotone"></phfastforward><span class="clamp text visuallyHidden">Fast forward back 30 seconds</span>
  </button><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
    <phskipforward class="icon" aria-hidden="true" size="24" weight="duotone"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
  </button>
  <!--v-if-->
</div>"
`;

exports[`PlayerControls > when isRadioStation value is true > matches the snapshot 1`] = `
"<div class="centerItems playerControls">
  <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
    <phskipback class="icon" aria-hidden="true" size="24" weight="duotone"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
  </button>
  <!--v-if--><span class="centerItems spinningLoader spinningLoader playPauseButton"><ph-circle-notch-stub size="20" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
  <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
    <phskipforward class="icon" aria-hidden="true" size="24" weight="duotone"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
  </button>
  <!--v-if-->
</div>"
`;
